// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Related Topics Expected use should render correctly with a single tag 1`] = `
.emotion-0 {
  padding: 0 0 2.5rem;
  background-color: #F6F6F6;
}

.emotion-1 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
  margin-top: 0;
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-1 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  @media (max-width: 62.9375rem) {
    .emotion-1 {
      margin-bottom: 1rem;
    }
  }
}

.emotion-3 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-3:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-9 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #F6F6F6;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    padding-right: 1rem;
  }
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: -0.5rem;
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  padding: 0;
  list-style-type: none;
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  word-break: break-word;
  min-width: 0;
  margin-top: 0.5rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-12 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.25rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-12 a:hover,
.emotion-12 a:focus {
  color: #B80000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <aside
    aria-labelledby="related-topics"
    class="emotion-0"
    data-testid="related-topics"
    role="complementary"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <h2
        class="emotion-3 emotion-4"
        id="section-label-heading-related-topics"
        tabindex="-1"
      >
        <span
          class="emotion-5 emotion-6"
        >
          <span
            class="emotion-7 emotion-8"
          >
            <span
              class="emotion-9 emotion-10"
              dir="ltr"
              id="related-topics"
            >
              Temas relacionados
            </span>
          </span>
        </span>
      </h2>
    </div>
    <div
      class="emotion-11"
      data-script-present="true"
      data-service="mundo"
    >
      <div
        class="emotion-12"
        data-script-present="true"
        data-service="mundo"
      >
        <a
          href="https://www.bbc.com/mundo/topics/123"
        >
          topic
        </a>
      </div>
    </div>
  </aside>
</div>
`;

exports[`Related Topics Expected use should render correctly with multiple tags 1`] = `
.emotion-0 {
  padding: 0 0 2.5rem;
  background-color: #F6F6F6;
}

.emotion-1 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
  margin-top: 0;
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-1 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  @media (max-width: 62.9375rem) {
    .emotion-1 {
      margin-bottom: 1rem;
    }
  }
}

.emotion-3 {
  margin: 0;
  padding: 0;
  scroll-margin-top: 1rem;
}

.emotion-3:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-9 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #F6F6F6;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    padding-right: 1rem;
  }
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: -0.5rem;
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  padding: 0;
  list-style-type: none;
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  word-break: break-word;
  min-width: 0;
  margin-top: 0.5rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-12 a {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-height: 2.75rem;
  padding: 0.25rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222222;
}

.emotion-12 a:hover,
.emotion-12 a:focus {
  color: #B80000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <aside
    aria-labelledby="related-topics"
    class="emotion-0"
    data-testid="related-topics"
    role="complementary"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <h2
        class="emotion-3 emotion-4"
        id="section-label-heading-related-topics"
        tabindex="-1"
      >
        <span
          class="emotion-5 emotion-6"
        >
          <span
            class="emotion-7 emotion-8"
          >
            <span
              class="emotion-9 emotion-10"
              dir="ltr"
              id="related-topics"
            >
              Temas relacionados
            </span>
          </span>
        </span>
      </h2>
    </div>
    <ul
      class="emotion-11"
      data-script-present="true"
      data-service="mundo"
      role="list"
    >
      <li
        class="emotion-12"
        data-script-present="true"
        data-service="mundo"
      >
        <a
          href="https://www.bbc.com/mundo/topics/1"
        >
          topic1
        </a>
      </li>
      <li
        class="emotion-12"
        data-script-present="true"
        data-service="mundo"
      >
        <a
          href="https://www.bbc.com/mundo/topics/2"
        >
          topic2
        </a>
      </li>
      <li
        class="emotion-12"
        data-script-present="true"
        data-service="mundo"
      >
        <a
          href="https://www.bbc.com/mundo/topics/3"
        >
          topic3
        </a>
      </li>
    </ul>
  </aside>
</div>
`;
